[package]
name = "mod_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mod_rs"
path = "src/mod_rs/lib.rs" 
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
numpy = "0.19.0"
pyo3 = { version = "0.19", features = ["extension-module"] }
