[package]
name = "nn_from_scratch"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
blas-src = { version = "0.10.0", features = ["openblas"] }
criterion = "0.5.1"
csv = "1.3.0"
itertools = "0.12.1"
kdam = { version = "0.5.1", features = ["rich"] }
ndarray = { version = "0.15.6", features = ["blas", "approx-0_5", "serde"] }
ndarray-conv = "0.3.3"
ndarray-csv = "0.5.2"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
num-traits = "0.2.18"
openblas-src = { version = "0.10.9", features = ["system"] }
rand = "0.8.5"
rstest = "0.18.2"
rustfft = "6.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[[bench]]
name = "benchmark"
harness = false

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "mnist"
path = "rust/src/bin/mnist.rs"

[[bin]]
name = "conv-rs"
path = "rust/src/bin/conv-rs.rs"
