[tool.poetry]
name = "nn-from-scratch"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "nn_from_scratch", from = "src/python"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
rich = "^13.7.0"
polars = "^0.20.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.1.14"
taskipy = "^1.12.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.4.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
test = { cmd = "pytest src/python -vv", help = "Run all tests"}

[tool.taskipy.tasks.coverage]
cmd = '''
    pytest src/python -vv --cov=src/python/nn_from_scratch &&
    coverage html -d /tmp/coverage &&
    firefox /tmp/coverage/index.html
'''
help = "Generates the code coverage report"

[tool.taskipy.tasks.format]
cmd = "isort src/python && ruff format src/python"
help = "Formats the source code of the project"